cmake_minimum_required(VERSION 3.14)
project(swordFingerOffer)

set(CMAKE_CXX_STANDARD 14)

add_executable(swordFingerOffer1arrayFind arrayFind.cpp)
add_executable(sFO2replaceSpace repalceSpace.cpp stackPushPop.cpp)
add_executable(sFO3printListFromTailToHead printListFromTailToHead.cpp)
add_executable(sFO4reconstructBinaryTree reconstructBinaryTree.cpp)